WeeChat ChangeLog
=================
Sébastien Helleu <flashcode@flashtux.org>
v0.3.8-dev, 2012-03-24


Version 0.3.8 (under dev!)
--------------------------

* core: add a connection timeout for child process in hook_connect (bug #35966)
* core: follow symbolic links when writing configuration files (.conf)
  (task #11779)
* core: fix lost scroll when switching to a buffer with a pending search
* core: add support of terminal "bracketed paste mode", new options
  weechat.look.paste_bracketed and weechat.look.paste_bracketed_timer_delay
  (task #11316)
* core: fix display of wide chars on last column of chat area (patch #7733)
* api: display warning in scripts when invalid pointers (malformed strings) are
  given to plugin API functions (warning displayed if debug for plugin is >= 1)
* api: add list "gui_buffer_last_displayed" in hdata "buffer"
* irc: do not send command "MODE #channel" on manual /names (do it only when
  names are received on join of channel) (bug #35930)
* irc: do not allow the creation of two servers with same name but different
  case (fix error when writing file irc.conf) (bug #35840)
* irc: update away flag for nicks on manual /who
* irc: display privmsg messages to "@#channel" and "+#channel" in channel buffer
  (bug #35331)
* irc: fix redirection of message when message is queued for sending on server
* irc: add signals and tags in messages for irc notify (task #11887)
* irc: check notify immediately when adding a nick to notify list, improve
  first notify message for a nick (bug #35731)
* irc: fix display of color in hostname (join/part/quit messages)
* irc: compute hash to find nick color for nick in server message when nick
  is not in nicklist
* irc: add support of "external" SASL mechanism (task #11864)
* irc: close server buffer when server is deleted
* irc: add search for lower case nicks in option irc.look.nick_color_force
* relay: redirect some irc messages from clients to hide output (messages: mode,